// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Updates/> should display spinner 1`] = `
<div>
  <h1>
    Updates
  </h1>
  <div
    class="spinner-wrapper my-3 text-center"
  >
    <div
      class="spinner-border"
      role="status"
    >
      <span
        class="sr-only"
      />
    </div>
  </div>
</div>
`;

exports[`<Updates/> should display spinner while check is pending 1`] = `
<div>
  <h1>
    Updates
  </h1>
  Manually check for updates and install them immediately.
  <div
    class="col-sm-12 offset-lg-1 col-lg-10 p-0 mb-3 text-right"
  >
    <button
      class="btn btn-primary mb-3 col-sm-12 col-lg-3"
      disabled=""
      type="button"
    >
       
       
      Check and install updates
    </button>
  </div>
  <div
    class="spinner-wrapper text-center"
  >
    <div
      class="spinner-border"
      role="status"
    >
      <span
        class="sr-only"
      />
    </div>
  </div>
</div>
`;

exports[`<Updates/> should display spinner while check is pending 2`] = `
<div>
  <h1>
    Updates
  </h1>
  Manually check for updates and install them immediately.
  <div
    class="col-sm-12 offset-lg-1 col-lg-10 p-0 mb-3 text-right"
  >
    <button
      class="btn btn-primary mb-3 col-sm-12 col-lg-3"
      disabled=""
      type="button"
    >
       
       
      Check and install updates
    </button>
  </div>
  <div
    class="spinner-wrapper text-center"
  >
    <div
      class="spinner-border"
      role="status"
    >
      <span
        class="sr-only"
      />
    </div>
  </div>
</div>
`;

exports[`<Updates/> should handle approvable updates 1`] = `
<div>
  <h1>
    Updates
  </h1>
  Manually check for updates and review them immediately.
  <div
    class="col-sm-12 offset-lg-1 col-lg-10 p-0 mb-3 text-right"
  >
    <button
      class="btn btn-primary mb-3 col-sm-12 col-lg-3"
      type="button"
    >
       
       
      Check updates
    </button>
  </div>
  <div
    class="mt-4"
  >
    <h3>
      Approve Update From %s
    </h3>
    <p>
      There is %d package to be updated. See 
      <a
        aria-controls="plan-wrapper"
        aria-expanded="false"
        data-toggle="collapse"
        href="#plan-wrapper"
        role="button"
      >
        details
      </a>
    </p>
    <div
      class="collapse"
      data-testid="plan-wrapper"
      id="plan-wrapper"
    >
      <table
        class="table table-hover"
      >
        <thead>
          <tr>
            <th
              scope="col"
            >
              Action
            </th>
            <th
              scope="col"
            >
              Name
            </th>
            <th
              scope="col"
            >
              Current
            </th>
            <th
              scope="col"
            >
              New
            </th>
          </tr>
        </thead>
        <tbody>
          <tr>
            <td>
              install
            </td>
            <td>
              PACKAGE
            </td>
            <td>
              1.0
            </td>
            <td>
              2.0
            </td>
          </tr>
        </tbody>
      </table>
    </div>
    <button
      class="btn btn-warning offset-lg-1 col-lg-4 col-sm-12"
      style="margin-bottom: 1rem;"
      type="button"
    >
       
       
      Ignore
    </button>
    <button
      class="btn btn-primary col-sm-12 col-lg-4 offset-lg-2 col-lg-3"
      style="margin-bottom: 1rem;"
      type="button"
    >
       
       
      Install now
    </button>
  </div>
</div>
`;

exports[`<Updates/> should handle automatic updates (no delays/approvals) 1`] = `
<div>
  <h1>
    Updates
  </h1>
  Manually check for updates and install them immediately.
  <div
    class="col-sm-12 offset-lg-1 col-lg-10 p-0 mb-3 text-right"
  >
    <button
      class="btn btn-primary mb-3 col-sm-12 col-lg-3"
      type="button"
    >
       
       
      Check and install updates
    </button>
  </div>
</div>
`;

exports[`<Updates/> should handle disabled updates 1`] = `
<div>
  <h1>
    Updates
  </h1>
  Automatic updates are disabled. Please enable delayed or approval-requiring updates to review them.
</div>
`;

exports[`<Updates/> should handle error 1`] = `
<div>
  <h1>
    Updates
  </h1>
  <p
    class="text-center text-danger"
  >
    An error occurred while fetching data.
  </p>
</div>
`;
